--- a/org/deployment/deployment.org
+++ b/org/deployment/deployment.org
@@ -122,15 +122,28 @@ Notes:
 #+end_src
 
 ** Frontend REPL
-#+begin_src bash :results silent
-  kubectl -n sharingio-pair apply -f frontend-repl-service.yaml
+Setup DNS endpoints
+
+#+begin_src yaml :tangle dev-endpoints.yaml
+apiVersion: externaldns.k8s.io/v1alpha1
+kind: DNSEndpoint
+metadata:
+  name: pair-dev-sharing-io
+spec:
+  endpoints:
+  - dnsName: pair-dev.sharing.io
+    recordTTL: 60
+    recordType: A
+    targets:
+    - 139.178.68.219
+#+end_src
+
+#+begin_src shell :results silent
+  kubectl apply -f dev-endpoints.yaml
 #+end_src
 
 #+begin_src bash :results silent
-  kubectl -n sharingio-pair patch ingress sharingio-pair \
-    -p $"$(cat frontend-repl-ingress.yaml)"
-#+end_src
-
-#+RESULTS:
-#+begin_src bash
+  kubectl -n sharingio-pair apply \
+    -f frontend-repl-service.yaml \
+    -f frontend-repl-ingress.yaml
 #+end_src
