--- a/README.org
+++ b/README.org
@@ -5,11 +5,15 @@ Pairing is sharing
 #+end_quote
 
 * Features
-- provision a Kubernetes cluster on Equinix Metal / Packet with a repo ready to pair shortly
+- provision sharable pairing environment
+- build out of your project
+- instance development and project set up
 - get a Kubeconfig and a tmate session to begin
 
+For a full rundown of features, see the [[./org/features.org][features docs]].
+
 * Set up
-For setting up Pair, check out the [[./org/deployment/deployment.org][deployment docs]].
+For setting up Pair, check out the [[./org/deployment.org][deployment docs]] and the [[./org/configuration.org][configuration docs]].
 
 * License
 
