--- a/org/external-dns/external-dns.org
+++ b/org/external-dns/external-dns.org
@@ -113,7 +113,7 @@ spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
-        image: k8s.gcr.io/external-dns/external-dns:v0.7.5
+        image: k8s.gcr.io/external-dns/external-dns:v0.9.0
         args:
         - --source=crd
         - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
@@ -124,6 +124,7 @@ spec:
         - --registry=txt
         - --log-level=debug
         - --aws-batch-change-size=99
+        - --managed-record-types=A,CNAME,NS
         env:
           - name: EXTERNAL_DNS_DOMAIN_FILTER
             valueFrom:
